Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-74342

QML RichText hr element doesn't work

XMLWordPrintable

    • eca6bd485436f9ddf16036b98c993b7ffeb7e6c4 (qt/qtdeclarative/dev), 9b39b0301 (dev), 6053360f3 (6.7), 685171786 (6.6), ab58c0f4f (tqtc/lts-6.5)

      It's documented as working, and supporting the "width" attribute, but it doesn't. If you manage to get it to work, it would be nice to add the ability to set its thickness and color, perhaps by using the height and background-color styles.

      In the attached example (which also shows two other reported bugs), there is an <hr/> element between two <p> elements. There is no resulting horizontal line in the display. If you can figure out some combination of attributes or styles that makes the line appear, you're a cleverer man than I.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            srutledg Shawn Rutledge
            pderocco Paul DeRocco
            Votes:
            7 Vote for this issue
            Watchers:
            11 Start watching this issue

              Created:
              Updated:
              Resolved: